--- a/package.json
+++ b/package.json
@@ -12,19 +12,26 @@
   "dependencies": {
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
-    "next": "13.4.8",
+    "next": "^13.5.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "styled-components": "^6.0.2"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@svgr/webpack": "^8.0.1",
+    "@svgr/cli": "^8.1.0",
+    "@svgr/webpack": "8.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "eslint-config-prettier": "9.0.0",
     "eslint-plugin-jest": "^27.2.2",
+    "framer-motion": "10.16.4",
+    "install": "0.13.0",
     "jest": "^29.6.0",
-    "jest-environment-jsdom": "^29.6.0"
+    "jest-environment-jsdom": "^29.6.0",
+    "npm": "10.2.1",
+    "prettier": "3.0.3",
+    "styled-components": "6.1.0",
+    "swr": "2.2.4"
   },
   "description": "Next.js (incl. Styled Components and Jest)",
   "nf": {
