--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
+    "@plaiceholder/next": "^3.0.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "next": "^13.5.6",
