--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "eslint-config-next": "13.4.8",
     "next": "^13.5.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "use-local-storage-state": "^19.1.0"
   },
   "devDependencies": {
     "@svgr/cli": "^8.1.0",
