--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "^13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "use-local-storage-state": "^19.1.0"
+    "use-local-storage-state": "^19.1.0",
+    "zustand": "^4.4.4"
   },
   "devDependencies": {
     "@svgr/cli": "^8.1.0",
